# audio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_best.txt  requirements_min.txt  test-hu3.m4a  test-hu4.m4a  test-hu5.m4a  test-si1.m4a
.github/workflows/: python-ci.yml  release.yml
docs/: ALGO.md
melody_app/: __init__.py  audio.py  cli.py  key.py  melody.py  midi_io.py  pipeline.py  synth.py
melody_app/backends/: basic_pitch_backend.py  crepe_backend.py  piano_transcription_backend.py  pyin_backend.py  rmvpe_backend.py
out_hu4_crepe/: 04_chords.csv  04_chords.mid
out_hu4_pyin/: 01_pitch_track.csv  02_melody.json  02_melody.mid  02_melody_jianpu.txt  02_melody_note_names.txt  04_chords.mid
out_hu4_pyin_v3/: 02_melody.json  02_melody.mid  02_melody_note_names.txt
out_hu4_v1/: 01_pitch_track.csv
out_hu4_v2/: 02_melody.json  02_melody.mid  02_melody_jianpu.txt  02_melody_note_names.txt
out_hu4_v3/: 02_melody.json  02_melody.mid  02_melody_jianpu.txt  02_melody_note_names.txt
out_hu4_v4/: 02_melody_jianpu.txt  04_chords.csv
out_hu5/: 01_pitch_track.csv  02_melody.json  02_melody.mid  02_melody_jianpu.txt  02_melody_note_names.txt  04_chords.csv  04_chords.mid
out_melody/: 01_pitch_track.csv  02_melody.json  02_melody.mid  02_melody_jianpu.txt  02_melody_note_names.txt
out_si1/: 01_pitch_track.csv  02_melody.json  02_melody.mid  02_melody_jianpu.txt  02_melody_note_names.txt  04_chords.csv  04_chords.mid
out_si1auto/: 01_pitch_track.csv  02_melody.json  02_melody.mid  02_melody_jianpu.txt  02_melody_note_names.txt
(+4 files in other folders)
